--- a/food_ordering_frontend/components/MyStorePage/Highchart/styles.module.scss
+++ b/food_ordering_frontend/components/MyStorePage/Highchart/styles.module.scss
@@ -42,5 +42,10 @@ $purple: rgb(156, 54, 181);
     height: fit-content;            
     min-width: fit-content;
     width: fit-content;
-    
+}
+
+.yearsInput {
+    margin: 4px 6px;
+    color: white;
+    width: fit-content;
 }
