--- a/food_ordering_frontend/components/shards/CardItem/styles.module.scss
+++ b/food_ordering_frontend/components/shards/CardItem/styles.module.scss
@@ -100,7 +100,7 @@ $imgWidth: calc($cardWidth - 40px);
 .halfBottomBox{
     position: relative;
     border-radius: 5px;
-    margin: auto;
+    // margin: auto;
     padding: 6.42px 20px 3px 20px;
     background: #25262b;
     bottom: 0.6725rem;
